--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -3,6 +3,18 @@ sphinx>=1.4
 sphinx-rtd-theme
 sphinxcontrib-programoutput
 
-# the docs include snippets from ara --help commands
-# ara needs to be installed so sphinxcontrib-programoutput can retrieve them
-ara[server]
+# For ara cli's programoutput
+cliff
+
+# For ara-manage cli's programoutput, we need to include server extra dependencies from setup.cfg
+Django>=2.1.5,<3.0
+djangorestframework>=3.9.1
+django-cors-headers
+django-filter
+django-health-check
+dynaconf[yaml]
+tzlocal
+whitenoise
+pygments
+# for the "ara prometheus" exporter CLI command
+prometheus_client
