--- a/setup.cfg
+++ b/setup.cfg
@@ -14,15 +14,14 @@ classifier =
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
-    Programming Language :: Python :: 3.12
     Development Status :: 5 - Production/Stable
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.6
 
 [global]
 setup-hooks =
@@ -39,6 +38,7 @@ console_scripts =
 
 ara.cli =
     expire = ara.cli.expire:ExpireObjects
+    prometheus = ara.cli.prometheus:PrometheusExporter
     playbook list = ara.cli.playbook:PlaybookList
     playbook show = ara.cli.playbook:PlaybookShow
     playbook delete = ara.cli.playbook:PlaybookDelete
@@ -64,26 +64,25 @@ ara.cli =
 
 [extras]
 server=
-    # 3.2 LTS is supported until April 2024 after which we should lift to >=4.2
-    # https://github.com/ansible-community/ara/issues/485
-    Django>=3.2,<4.3
+    Django>=3.2,<3.3
     djangorestframework>=3.9.1
     django-cors-headers
     django-filter
     django-health-check
     # dynaconf 3.1.3 had a regression https://github.com/ansible-community/ara/issues/212
     # dynaconf dropped support for py35 at version 3.0.0: https://github.com/ansible-community/ara/issues/370
-    dynaconf[yaml]>=3.0.0,!=3.1.3,<4.0.0
-    # dynaconf[yaml] should recover ruamel.yaml but this isn't always the case (i.e, Fedora koji)
-    # Make the dependency explicit.
-    ruamel.yaml
+    dynaconf[yaml]>=3.0.0,!=3.1.3,<4.0.0;python_version>='3.6'
     tzlocal>=4.0
-    whitenoise
+    # whitenoise 6.0.0 dropped support for py36
+    whitenoise<6.0.0;python_version=='3.6'
+    whitenoise;python_version>='3.7'
     pygments
 postgresql=
     psycopg2
 mysql=
     mysqlclient
+prometheus=
+    prometheus_client
 
 [build_sphinx]
 source-dir = doc/source
